--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-./public
-./node_modules
-./index.css
-./package-lock.json
-./tailwind.config.json
+**/public
+**/node_modules
+**/index.css
+**/package-lock.json
+**/tailwind.config.json
